<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="355sp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        app:cardCornerRadius="22sp">
        <RelativeLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_alignParentTop="true"
                android:text="@string/title_logout"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/tab_selected"/>
            <TextView
                android:id="@+id/dialog_messager"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:text="@string/message_logout"
                android:textSize="22sp"
                android:padding="9sp"
                android:textColor="@color/color_DA"
                android:gravity="center"
                android:background="#f1f1f1"
                android:layout_below="@+id/dialog_title"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_dialog"
                android:layout_width="177sp"
                android:layout_height="50sp"
                android:background="@drawable/dialog_yes"
                android:layout_below="@+id/dialog_messager"
                android:text="@string/yes_logout"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_dialog"
                android:layout_width="177sp"
                android:layout_height="50sp"
                android:background="@drawable/dialog_no"
                android:layout_below="@+id/dialog_messager"
                android:layout_toRightOf="@+id/yes_dialog"
                android:text="@string/no_logout"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>