<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    tools:context=".UI.Acti_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="9dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/Login"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="40dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/line"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Acti_Login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#4fae50"
                    app:hintTextColor="#4fae50"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@android:drawable/ic_menu_my_calendar"
                    app:startIconTint="#4fae50">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Email"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Acti_Login_passWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#4fae50"
                    app:hintTextColor="#4fae50"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@android:drawable/ic_lock_lock"
                    app:startIconTint="#4fae50">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/PassWord"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/Acti_login_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_checkBox"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/Login_As"
                    android:textSize="10sp"
                    android:textColor="@color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Rdo_Admin"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/Rdo_Member"/>
                    </RadioGroup>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Acti_Login_AppCompatButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/Login"
                    style="@style/buttonLogin"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/Forgot_passWord"
                    android:textSize="10sp"
                    android:textColor="@color/color_DA"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:id="@+id/Acti_Login_View"
        android:layout_width="64sp"
        android:layout_height="64sp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/zoom"
        />
</RelativeLayout>