<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="355sp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        app:cardCornerRadius="22sp">
        <RelativeLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_alignParentTop="true"
                android:text="@string/title_logout"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/tab_selected"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_TextInputLayout_passWordOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_title"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#4fae50"
                app:hintTextColor="#4fae50"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                app:startIconTint="#4fae50">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/PassWord"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_TextInputLayout_passWordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_TextInputLayout_passWordOld"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#4fae50"
                app:hintTextColor="#4fae50"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                app:startIconTint="#4fae50">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/PassWord"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_TextInputLayout_passWordNewR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dialog_TextInputLayout_passWordNew"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#4fae50"
                app:hintTextColor="#4fae50"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                app:startIconTint="#4fae50">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/PassWord"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_change_dialog"
                android:layout_width="177sp"
                android:layout_height="50sp"
                android:background="@drawable/dialog_yes"
                android:layout_below="@+id/dialog_TextInputLayout_passWordNewR"
                android:text="@string/yes_logout"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_change_dialog"
                android:layout_width="177sp"
                android:layout_height="50sp"
                android:background="@drawable/dialog_no"
                android:layout_below="@+id/dialog_TextInputLayout_passWordNewR"
                android:layout_toRightOf="@+id/yes_change_dialog"
                android:text="@string/no_logout"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>